<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dialog.CustomDialog">

    <TextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:text="@string/text_title_dialog"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/tv_desc_win"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:text="@string/text_winner"
        app:layout_constraintTop_toBottomOf="@id/tv_title_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/_20ssp"
        android:textAlignment="center"/>

    <TextView
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/tv_play_again"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_play_again"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:text="@string/text_play_again"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_win"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/tv_back_menu"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_back_menu"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:text="@string/text_back_menu"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_play_again"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>